# boids

./: .gitignore  CMakeLists.txt
.github/workflows/: publish.yml  wheels.yml
boids/: Pipfile  config.py  flocking.py  main.py  models.py
cmake/: dependencies.cmake
engine/: CMakeLists.txt  setup.py
engine/example/: __main__.py  config.py
engine/include/engine/: input.h  renderer.h  runtime.h  window.h
engine/source/engine/: engine.cc  renderer.cc  runtime.cc  window.cc
